# Python-Power-User

./: .gitignore  README.md  pyproject.toml  python_poweruser.py  test_quiz.py
.github/workflows/: ci.yml
docs/: 404.html  app.js  base.css  index.html  manifest.json  robots.txt  sitemap.xml  style.css  sw.js
docs/assets/: app.css  app.js
docs/content/: sections.json
tools/: build_web_content.py
