[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-power-user"
version = "0.1.0"
description = "Python Power User — a complete Python language reference, quiz, and TUI in a single file."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Stewart Alexander" }
]
license = { text = "MIT" }
keywords = ["python", "reference", "tutorial", "cli", "tui"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/stewalexander/Python-Power-User"

[project.scripts]
python-power-user = "python_poweruser:main"

